--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.5.2",
     "rbx": "^2.2.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
