--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
+    "react-firebaseui": "^4.0.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
